Fix: increase body padding-top to 80px to prevent navbar overlap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 body:not(.admin-page) {
-    padding-top: 64px;
+    padding-top: 80px;
 }
 
 /* Header Styles */
